--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -40,3 +40,32 @@
       </i>
     </div>
   </nav>
+
+  <!-- <ng-template #content let-modal>
+    <div class="modal-body">
+        <div class="container">
+            <div class="row">
+              <div class="col-sm-12 col-md-12 col-lg-12 mx-auto">
+                <div class="card card-signin my-3">
+                  <div class="card-body">
+                    <h5 class="card-title text-center">Sign In</h5>
+                    <form class="form-signin">
+                      <div class="form-label-group">
+                        <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+                        <label for="inputEmail">User name</label>
+                      </div>
+        
+                      <div class="form-label-group">
+                        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+                        <label for="inputPassword">Password</label>
+                      </div>
+                      <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Sign in</button>
+                      
+                    </form>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>      
+    </div>
+  </ng-template> -->
