--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,7 +24,7 @@
     </div>
   </div>
 </div> 
-<div class="spinner-border"></div>
+<!-- <div class="spinner-border"></div> -->
 <div class="container" *ngIf="!isLoggedIn">  
   <div class="row">
     <div class="col-md-12 container-nopadding">
