--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -137,12 +137,12 @@
         <br>
           <ul>
             <li>Move your car to a safe location </li>
-            <li><li>Determine if there are any injuries resulting in the incident</li></li>
-            <li><li>Call 911 and follow instruction from the police</li></li>
-            <li><li>Get names and information from the other involved in the incident </li></li>
-            <li><li>Determine if there are any injuries resulting in the incident</li></li>
-            <li><li>Take pictures of license plate of vehicle involved, damages and objects at the scene of the accident</li></li>
-            <li><li>Keep receipts of all the repairs, parking fees and any related expenses that are incurred </li></li>
+            <li>Determine if there are any injuries resulting in the incident</li>
+            <li>Call 911 and follow instruction from the police</li>
+            <li>Get names and information from the other involved in the incident </li>
+            <li>Determine if there are any injuries resulting in the incident</li>
+            <li>Take pictures of license plate of vehicle involved, damages and objects at the scene of the accident</li>
+            <li>Keep receipts of all the repairs, parking fees and any related expenses that are incurred </li>
           </ul>
         <br>
         <br>
