--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -31,6 +31,9 @@
         <li class="nav-item">
           <a class="nav-link" href="#">About</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#"><b><big>Digital FNOL</b></big></a>
+        </li>
       </ul>
       <span class="navbar-text">
           login &nbsp;
