--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -138,7 +138,7 @@
           <ul>
             <li>Move your car to a safe location </li>
             <li>Determine if there are any injuries resulting in the incident</li>
-            <li>Call 911 and follow instruction from the police</li>
+            <li>Call 911 and follow instructions from the police</li>
             <li>Get names and information from the other involved in the incident </li>
             <li>Determine if there are any injuries resulting in the incident</li>
             <li>Take pictures of license plate of vehicle involved, damages and objects at the scene of the accident</li>
