--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -448,7 +448,7 @@
         <br>
         <br>
         <br>       
-        <button type="button" class="btn btn-primary btn-block" (click)="step = 11">No other details</button>
+        <button type="button" class="btn btn-primary btn-block" (click)="step = 11">Next</button>
       </div>
     </ng-container>
     <ng-container *ngIf="step===10">
