--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -124,8 +124,6 @@
           </form>
         <br>
         <br>
-        <br>
-        <br>
         <button type="button" class=" btn btn-default btn-block round-default" *ngIf="!pg2PolicyClick">Find My Policy</button>
         <button type="button" class="btn btn-primary btn-block" *ngIf="pg2PolicyClick" (click)="checkForPolicyNum()">Find My Policy</button>
       </div>
@@ -136,16 +134,14 @@
         <br>
         <br>
           <ul>
-            <li>Move your car to a safe location </li>
-            <li>Determine if there are any injuries resulting in the incident</li>
-            <li>Call 911 and follow instructions from the police</li>
-            <li>Get names and information from the other involved in the incident </li>
-            <li>Determine if there are any injuries resulting in the incident</li>
-            <li>Take pictures of license plate of vehicle involved, damages and objects at the scene of the accident</li>
-            <li>Keep receipts of all the repairs, parking fees and any related expenses that are incurred </li>
+            <li>Move your car to a safe location </li><br>
+            <li>Determine if there are any injuries resulting in the incident</li><br>
+            <li>Call 911 and follow instructions from the police</li><br>
+            <li>Get names and information from the other involved in the incident </li><br>
+            <li>Determine if there are any injuries resulting in the incident</li><br>
+            <li>Take pictures of license plate of vehicle involved, damages and objects at the scene of the accident</li><br>
+            <li>Keep receipts of all the repairs, parking fees and any related expenses that are incurred </li><br>
           </ul>
-        <br>
-        <br>
         <br>
         <br>
         <button type="button" class="btn btn-primary btn-block" (click)="nextPage()">Continue with filing the claim</button>
@@ -384,11 +380,11 @@
             </div>
           </div>
           <br>
-          <br>
           <div class="form-group">
             <label> <b>Where can we contact you in case of further questions?</b></label>
             <br>
             <input class="form-control" placeholder="Phone Number" id="inputdefault" type="text" [(ngModel)]="phoneNumber" (ngModelChange)="checkAccidentDetails()">            
+            <br>
             <input class="form-control" placeholder="Email" id="inputdefault" type="text" [(ngModel)]="email" (ngModelChange)="checkAccidentDetails()">
           </div>
           <br>
@@ -402,7 +398,21 @@
     <ng-container *ngIf="step===9">
       <div class="container-pg">
         <div class="pg-header"><span>Do you have any other details to add?</span></div>
-        <span class="help_text">Note: We encourage you to provide as much details as possible for a quicker settlement time</span>
+        <span class="help_text">We encourage you to provide as much details as possible for a quicker resolution</span>
+        <br><br>
+         <div class="dropdown_button box-sha" (click)="userSelectReport='car Image'; nextPage(); uploadedcar = true">
+          <div style="height:35px">
+            <span>Images of your vehicle</span>
+            <span style="float:right">
+              <i *ngIf="!uploadedcar" class="material-icons">
+                add
+              </i>
+              <i *ngIf="uploadedcar" class="material-icons">
+                  done
+              </i>
+            </span>
+          </div>
+        </div>
         <br>
         <div class="dropdown_button box-sha" (click)="userSelectReport='3rd party'; nextPage(); uploaded3rdparty = true; ">
           <div style="height:35px">
@@ -432,21 +442,6 @@
           </div>
         </div>
         <br>
-        <div class="dropdown_button box-sha" (click)="userSelectReport='car Image'; nextPage(); uploadedcar = true">
-          <div style="height:35px">
-            <span>Images of the vehicle</span>
-            <span style="float:right">
-              <i *ngIf="!uploadedcar" class="material-icons">
-                add
-              </i>
-              <i *ngIf="uploadedcar" class="material-icons">
-                  done
-              </i>
-            </span>
-          </div>
-        </div>
-        <br>
-        <br>
         <br>       
         <button type="button" class="btn btn-primary btn-block" (click)="step = 11">Next</button>
       </div>
@@ -454,14 +449,13 @@
     <ng-container *ngIf="step===10">
       <div class="container-pg">
         <div class="pg-header">
+          <span *ngIf="userSelectReport=='car Image'">Images of Your vehicle</span>
           <span *ngIf="userSelectReport=='3rd party'">Details of the other party</span>
           <span *ngIf="userSelectReport=='police report'">Police Report</span>
-          <span *ngIf="userSelectReport=='car Image'">Images of Your vehicle</span>
         </div>
-        <span class="help_text" *ngIf="userSelectReport=='police report'">Note: Please upload police report, if available</span>
-        <span class="help_text" *ngIf="userSelectReport=='3rd party'">Note: Please give details about the other party – name, phone number/email id OR upload an image of the other party’s insurance card</span>
-        <span class="help_text" *ngIf="userSelectReport=='car Image'">Note: Please upload images showing damages to your vehicle</span>
-        <br>
+        <span class="help_text" *ngIf="userSelectReport=='car Image'">Please upload images showing damages to your vehicle</span>
+        <span class="help_text" *ngIf="userSelectReport=='police report'">Please upload police report, if available</span>
+        <span class="help_text" *ngIf="userSelectReport=='3rd party'">Please give name, phone number/email id of the other party OR upload an image of his/her insurance card</span>        <br>
         <div *ngIf="userSelectReport=='3rd party'">
           <div class="form-group col-12">
             <label for="comment"><b>Provide a short description of the damages of the other party*</b></label>
@@ -499,14 +493,14 @@
     <ng-container *ngIf="step===11">
       <div class="container-pg">
         <div class="pg-header">
+          <span *ngIf="userSelectReport=='car Image'">Images of Your Vehicle</span>
           <span *ngIf="userSelectReport=='3rd party'">Details of the other party</span>
           <span *ngIf="userSelectReport=='police report'">Police Report</span>
-          <span *ngIf="userSelectReport=='car Image'">Images of Your Car</span>
         </div>
         <br>
-        <span class="help_text" *ngIf="userSelectReport=='police report'">Note: Please upload police report, if available</span>
-        <span class="help_text" *ngIf="userSelectReport=='3rd party'">Note: Please upload images of damages to the other party</span>
-        <span class="help_text" *ngIf="userSelectReport=='car Image'">Note: Please upload images showing damages to your vehicle</span> 
+        <span class="help_text" *ngIf="userSelectReport=='car Image'">Please upload images showing damages to your vehicle</span> 
+        <span class="help_text" *ngIf="userSelectReport=='police report'">Please upload police report, if available</span>
+        <span class="help_text" *ngIf="userSelectReport=='3rd party'">Please upload images of damages to the other party</span>
         <br>
         <div class="row">
           <div class="col-6">
@@ -526,9 +520,9 @@
           <textarea class="form-control" placeholder="Type here" rows="3" [(ngModel)]="carImageDesc" name="carImageDesc"></textarea>
         </div>
                <br>
-        <button type="button" *ngIf="userSelectReport == '3rd party' " class="btn btn-primary btn-block" (click)="step = 8">Done with the 3rd party Info</button>
-        <button type="button" *ngIf="userSelectReport == 'police report'" class="btn btn-primary btn-block" (click)="step = 8">Done with the police report</button>
-        <button type="button" *ngIf="userSelectReport == 'car Image'" class="btn btn-primary btn-block" (click)="step = 8">Done with the car Images</button>
+        <button type="button" *ngIf="userSelectReport == '3rd party' " class="btn btn-primary btn-block" (click)="step = 8">Next</button>
+        <button type="button" *ngIf="userSelectReport == 'police report'" class="btn btn-primary btn-block" (click)="step = 8">Next</button>
+        <button type="button" *ngIf="userSelectReport == 'car Image'" class="btn btn-primary btn-block" (click)="step = 8">Next</button>
       </div>
     </ng-container>
     <ng-container *ngIf="step===12">
@@ -589,7 +583,7 @@
       
           <div class="text-center">
             <p class="p-no-maring-bottom">Please click on location icon to select the icon from the map where incident
-              happended
+              occured
             </p>
             <div class="optional_text"><span>or</span></div>
             <p class="p-no-maring-bottom">
