--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -504,9 +504,9 @@
         <br>
         <div class="row">
           <div class="col-6">
+            <img *ngIf="userSelectReport=='car Image'"[src]="(url['carImage'] && url['carImage']['result']) ? url['carImage']['result'] : '../../assets/not_available.jpg'" height="100%" width="100%">
             <img *ngIf="userSelectReport=='3rd party'" [src]="(url['3rdParty'] && url['3rdParty']['result']) ? (url['3rdParty']['result'] ) : '../../assets/not_available.jpg'" height="100%" width="100%">
             <img *ngIf="userSelectReport=='police report'"[src]="(url['policeReport'] && url['policeReport']['result']) ? url['policeReport']['result'] : '../../assets/not_available.jpg'" height="100%" width="100%">
-            <img *ngIf="userSelectReport=='car Image'"[src]="(url['carImage'] && url['carImage']['result']) ? url['carImage']['result'] : '../../assets/not_available.jpg'" height="100%" width="100%">
           </div>
           <div class="col-6 image_div image_height_upload_extra">
             <i class="material-icons">
@@ -520,9 +520,9 @@
           <textarea class="form-control" placeholder="Type here" rows="3" [(ngModel)]="carImageDesc" name="carImageDesc"></textarea>
         </div>
                <br>
+        <button type="button" *ngIf="userSelectReport == 'car Image'" class="btn btn-primary btn-block" (click)="step = 8">Next</button>
         <button type="button" *ngIf="userSelectReport == '3rd party' " class="btn btn-primary btn-block" (click)="step = 8">Next</button>
         <button type="button" *ngIf="userSelectReport == 'police report'" class="btn btn-primary btn-block" (click)="step = 8">Next</button>
-        <button type="button" *ngIf="userSelectReport == 'car Image'" class="btn btn-primary btn-block" (click)="step = 8">Next</button>
       </div>
     </ng-container>
     <ng-container *ngIf="step===12">
@@ -545,7 +545,7 @@
             <br>
             <br>
             <div class="reg-text">
-              <span>Your Registration No. for the colllision claim is:</span>
+              <span>Your Registration No. for the collision claim is:</span>
             </div>
             <br>
             <div class="sub-num">
