--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -443,7 +443,7 @@
         </div>
         <br>
         <br>       
-        <button type="button" class="btn btn-primary btn-block" (click)="step = 11">Next</button>
+        <button type="button" class="btn btn-primary btn-block" (click)="step = 12">Next</button>
       </div>
     </ng-container>
     <ng-container *ngIf="step===10">
@@ -458,7 +458,7 @@
         <span class="help_text" *ngIf="userSelectReport=='3rd party'">Please give name, phone number/email id of the other party OR upload an image of his/her insurance card</span>        <br>
         <div *ngIf="userSelectReport=='3rd party'">
           <div class="form-group col-12">
-            <label for="comment"><b>Provide a short description of the damages of the other party*</b></label>
+            <label for="comment"><b>Provide a short description of the damages to the other's property*</b></label>
             <textarea class="form-control" placeholder="Type here" rows="3" [(ngModel)]="cardesc" name="cardesc"></textarea>
           </div>
           <div class="optional_text"></div>
@@ -483,7 +483,7 @@
           <i class="material-icons" (click)="fileToUpload.click()">
             add
           </i>
-          <span>Upload Image</span>
+          <span>Upload/Take Image</span>
         </div>
         <input #fileToUpload type="file" style="display:none;" (change)="onSelectFile($event)"> 
         <br>
@@ -498,9 +498,9 @@
           <span *ngIf="userSelectReport=='police report'">Police Report</span>
         </div>
         <br>
-        <span class="help_text" *ngIf="userSelectReport=='car Image'">Please upload images showing damages to your vehicle</span> 
+        <span class="help_text" *ngIf="userSelectReport=='car Image'">Please upload/take images showing damages to your vehicle</span> 
         <span class="help_text" *ngIf="userSelectReport=='police report'">Please upload police report, if available</span>
-        <span class="help_text" *ngIf="userSelectReport=='3rd party'">Please upload images of damages to the other party</span>
+        <span class="help_text" *ngIf="userSelectReport=='3rd party'">Please upload/take images of damages to the other party</span>
         <br>
         <div class="row">
           <div class="col-6">
@@ -512,7 +512,7 @@
             <i class="material-icons">
               add
             </i>
-            <span>Upload Image</span>
+            <span>Upload/Take Image</span>
           </div>
         </div>
         <div  *ngIf="userSelectReport == 'car Image'" class="form-group">
@@ -520,9 +520,9 @@
           <textarea class="form-control" placeholder="Type here" rows="3" [(ngModel)]="carImageDesc" name="carImageDesc"></textarea>
         </div>
                <br>
-        <button type="button" *ngIf="userSelectReport == 'car Image'" class="btn btn-primary btn-block" (click)="step = 8">Next</button>
-        <button type="button" *ngIf="userSelectReport == '3rd party' " class="btn btn-primary btn-block" (click)="step = 8">Next</button>
-        <button type="button" *ngIf="userSelectReport == 'police report'" class="btn btn-primary btn-block" (click)="step = 8">Next</button>
+        <button type="button" *ngIf="userSelectReport == 'car Image'" class="btn btn-primary btn-block" (click)="step = 9">Next</button>
+        <button type="button" *ngIf="userSelectReport == '3rd party' " class="btn btn-primary btn-block" (click)="step = 9">Next</button>
+        <button type="button" *ngIf="userSelectReport == 'police report'" class="btn btn-primary btn-block" (click)="step = 9">Next</button>
       </div>
     </ng-container>
     <ng-container *ngIf="step===12">
