--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -7,4 +7,10 @@
 a {
     color: white !important;
 }
+.navbar-center
+{
+  position: absolute;
+    left: 50%;
+    transform: translatex(-50%);
+}
 
