--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -32,7 +32,7 @@
           <a class="nav-link" href="#">About</a>
         </li>
         <li class="nav-item navbar-center">
-          <a class="center" href="#"><b>Digital FNOL</b></a>
+          <a href="#"><b>Digital FNOL</b></a>
         </li>
       </ul>
       <span class="navbar-text">
