--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -347,7 +347,7 @@
         <br>
         <br>
         <div>
-          <div><b>Where is the vechile currently located?</b></div>
+          <div><b>Where is the vehicle currently located?</b></div>
           <br>
           <div>
             <button type="button" class="btn btn-default round-default" *ngIf="!homeAccbtn" (click) = "homeAccbtn = true">Home</button> 
