--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -338,7 +338,8 @@
           <button type="button" class="btn btn-default btn-block round-default" *ngIf="!pg6Continue">Continue</button>
           <button type="button" class="btn btn-primary btn-block" *ngIf="pg6Continue" (click)="nextPage()" >Continue</button>
         </div>
-        <br>      
+        <br>
+        </ng-container>
     <ng-container *ngIf="step===8">
       <div class="container-pg">
         <div class="pg-header">
