--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -289,7 +289,7 @@
       </div>
     </ng-container>
     <ng-container *ngIf="step===7"> 
-      <div class="container-pg">
+      <!----<div class="container-pg">
         <div class="pg-header">
           <span>Tell us what happened</span>
         </div>
@@ -337,7 +337,7 @@
           <br>
           <button type="button" class="btn btn-default btn-block round-default" *ngIf="!pg6Continue">Continue</button>
           <button type="button" class="btn btn-primary btn-block" *ngIf="pg6Continue" (click)="nextPage()" >Continue</button>
-        </div>
+        </div>--->
         </ng-container>
     <ng-container *ngIf="step===8">
       <div class="container-pg">
