--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -169,7 +169,7 @@
           </div>
         </div>
         <div class="dropdown_list box-sha" *ngIf="listMenu">
-          <div class="dropdown_list_element">
+          <div class="dropdown_list_element" (click)="pg3Continue= false; radio= true">
             <div class="row m_10">
               <div><input type="radio" name="radio"> </div>&nbsp; &nbsp;
               <div>
@@ -185,7 +185,7 @@
               </div>
             </div>
           </div>
-          <div class="dropdown_list_element_no_bottom">
+          <div class="dropdown_list_element_no_bottom" (click)="pg3Continue= false; radio= true">
             <div class="row m_10">
               <div><input type="radio" name="radio"> </div>&nbsp; &nbsp;
               <div>
@@ -503,7 +503,7 @@
         <br>
         <div class="row">
           <div class="col-6">
-            <img *ngIf="userSelectReport=='car Image'"[src]="(url['carImage'] && url['carImage']['result']) ? url['carImage']['result'] : '../../assets/not_available.jpg'" height="100%" width="100%">
+            <img *ngIf="userSelectReport=='car Image'"[src]="(url['carImage'] && url['carImage']['result']) ? imageData : '../../assets/not_available.jpg'" height="100%" width="100%">
             <img *ngIf="userSelectReport=='3rd party'" [src]="(url['3rdParty'] && url['3rdParty']['result']) ? (url['3rdParty']['result'] ) : '../../assets/not_available.jpg'" height="100%" width="100%">
             <img *ngIf="userSelectReport=='police report'"[src]="(url['policeReport'] && url['policeReport']['result']) ? url['policeReport']['result'] : '../../assets/not_available.jpg'" height="100%" width="100%">
           </div>
