--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -537,25 +537,27 @@
         <div class="container-pg">
           <div class="text-center">
             <span class="pg-head-last">
-              <b>Congratulation!</b>
-            </span>
-            <div><span><b>Your claim has been submitted.</b></span></div>
+                <div><span><b>Your claim has been submitted.</b></span></div>
+            </span>          
             <br>
             <br>
             <br>
             <div class="reg-text">
-              <span>Your Registration No. for the collision claim is:</span>
+              <span>Registration No. for your claim is:</span>
             </div>
             <br>
             <div class="sub-num">
-              <span>789-567-6788</span>
+              <span>PPA-456227</span>
             </div>
           </div>
           <br>
           <br>
           <br>
           <br>
-          <button type="button" class="btn btn-default btn-block round-default">Track Your Claim</button>
+          <div class="pg-head-last">
+              <span>For future reference, Email and SMS will be sent to registered e-mail address and phone no:</span>
+            </div>
+          <!---<button type="button" class="btn btn-default btn-block round-default">Track Your Claim</button>
           <br>
           <div class="row">
           <div class="col-6">
@@ -566,7 +568,7 @@
           </div>
           </div>
           <br>
-          <button type="button" class="btn btn-primary btn-block" (click)="step = 1;">Home</button>
+          <button type="button" class="btn btn-primary btn-block" (click)="step = 1;">Home</button>---->
         </div>
       </ng-container>
 </div>
