--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -181,7 +181,7 @@
             <div class="row m_10">
               <div><input type="radio" name="radio" [checked]="radio"> </div>&nbsp; &nbsp;
               <div>
-                <p>Jeep Wrangler 2016-782WER</p>
+                <p>Toyota Camry 2018-782WER</p>
               </div>
             </div>
           </div>
@@ -189,7 +189,7 @@
             <div class="row m_10">
               <div><input type="radio" name="radio"> </div>&nbsp; &nbsp;
               <div>
-                <p>Toyota Camry 2014-ODW451</p>
+                <p>Jeep Wrangler 2014-ODW451</p>
               </div>
             </div>
           </div>
@@ -534,10 +534,13 @@
       </div>
     </ng-container>
     <ng-container *ngIf="step===13">
+      <br>
+      <br>
+      <br>
         <div class="container-pg">
           <div class="text-center">
             <span class="pg-head-last">
-                <div><span><b>Your claim has been submitted.</b></span></div>
+                <div><span><b>Your claim has been submitted</b></span></div>
             </span>          
             <br>
             <br>
@@ -549,14 +552,14 @@
             <div class="sub-num">
               <span>PPA-456227</span>
             </div>
-          </div>
           <br>
           <br>
           <br>
           <br>
           <div class="pg-head-last">
-              <span>For future reference, Email and SMS will be sent to registered e-mail address and phone no:</span>
+              <span><b>Email and SMS have been sent to you for future reference</b></span>
             </div>
+          </div>
           <!---<button type="button" class="btn btn-default btn-block round-default">Track Your Claim</button>
           <br>
           <div class="row">
