--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -22,7 +22,7 @@
     </button>
     <div class="collapse navbar-collapse " id="navbarText">
       <ul class="navbar-nav  mr-auto">
-        <li class="nav-item">
+      <!---  <li class="nav-item">
           <a class="nav-link" href="#">Insurance</a>
         </li>
         <li class="nav-item">
@@ -30,7 +30,7 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">About</a>
-        </li>
+        </li> ---->
         <li class="nav-item navbar-center">
           <a href="#"><b>Digital FNOL</b></a>
         </li>
